--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "bootstrap": "^5.3.3",
     "i18next": "^23.2.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.1",
