--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
