--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "typescript": "^4.9.5",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
